[package]
name = "yaler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yaler-server"
path = "src/bin/server.rs"

[[bin]]
name = "yaler-client"
path = "src/bin/client.rs"

[lib]
name = "yaler"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }

# HTTP/2 tunnel (replaces WebSocket)
h2 = "0.4"
http = "1"
bytes = "1"

# Server-side TLS
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rcgen = "0.11"

# Client-side TLS with Chrome fingerprint (BoringSSL)
boring = "4"
tokio-boring = "4"

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
