[package]
name = "yaler"
version = "0.1.0"
edition = "2021"

[lib]
name = "yaler"
path = "src/lib.rs"

[[bin]]
name = "yaler-server"
path = "src/bin/server.rs"

[[bin]]
name = "yaler-client"
path = "src/bin/client.rs"

[dependencies]
anyhow = "1"
boring = "5"
boring-sys = "5"
brotli = "8.0.2"
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-tungstenite = "0.13"
hyper-util = { version = "0.1", features = ["tokio"] }
lru = "0.17.0"
rand = "0.8"
rcgen = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tungstenite = "0.21"
